# api-forge

./: Cargo.toml  LICENSE  README.md  expanded.rs
.cargo/: config.toml
api-forge-macro/: Cargo.toml
api-forge-macro/src/: lib.rs
examples/: derive.rs  json_placeholder.rs
src/: error.rs  lib.rs
src/traits/: mod.rs
