[workspace]
members = ["api-forge-macro", "."]

[package]
name = "api-forge"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "A simple library for constructing SDKs for an API"
authors = ["Emil Schütt <emil.schutt@gmail.com>"]
readme = "README.md"
repository = "https://github.com/retrokiller543/api-forge"

[dependencies]
anyhow = "1.0.87"
tracing = "0.1.40"
thiserror = "1.0.63"
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rust = "0.6.0"
api-forge-macro = { version = "0.0.3", path = "api-forge-macro" }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[profile.release]
lto = true

[[example]]
name = "json_placeholder"
path = "examples/json_placeholder.rs"
doc-scrape-examples = true