[workspace]
members = ["api-forge-macro", "."]

[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "api-forge"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "A simple library for constructing SDKs for an API"
authors = ["Emil Schütt <emil.schutt@gmail.com>"]
readme = "README.md"
repository = "https://github.com/retrokiller543/api-forge"

[dependencies]
tracing = "0.1.40"
thiserror = "2.0.12"
reqwest = { version = "0.12", features = ["json", "multipart"]}
tokio = { version = "1.40", optional = true, features = ["full"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rust = "0.6.0"
api-forge-macro = { version = "0.0.3", path = "api-forge-macro" }

[features]
default = ["native"]
native = ['tokio']
wasm = ["wasm-bindgen-futures"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[profile.release]
lto = true
