[package]
name = "api-forge-macro"
version = "0.0.3"
authors = ["Emil Schütt <emil.schutt@gmail.com>"]
keywords = ["proc_macro", "procmacro"]
description = "A proc macro for constructing Request structs"
license = "MIT"
repository = "https://github.com/retrokiller543/api-forge"
readme = "../README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.79"
darling = "0.20.10"

